(test) added images

--- a/appsettings.json
+++ b/appsettings.json
@@ -54,5 +54,10 @@
       "client_id": "6361853",
       "client_secret": "vpyWriBqwwaNb0UekVGo"
     }
-  }
+  },
+  "AWS": {
+    "Profile": "markiz",
+    "Region": "eu-central-1"
+  },
+  "SupportEmail": "andred9991@gmail.com"
 }
